--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 
 <script src="https://smtpjs.com/v3/smtp.js">
 </script>
-<script src="css/script.js"></script>
+<script src="js/script.js"></script>
 
 
 </body>
