--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@
         </div>
         <div class="card">
           <div class="image-section">
-            <img src="image/img tourist.jpg">
+            <img src="image/IMG_20231214_154658_999.jpg">
           </div>
           <div class="article">
             <h2></h2>
-            <p>Lastly, events like 10k roses in Cordova Day-as not only showcase the natural beauty of the area but also promote tourism and local businesses. Visitors from near and far are drawn to such unique and captivating events, boosting the local economy and creating opportunities for the community. It's a win-win situation for everyone involved.</p>
+            <p>Events like 10k roses in Cordova Day-as not only showcase the natural beauty of the area but also promote tourism and local businesses. Visitors from near and far are drawn to such unique and captivating events, boosting the local economy and creating opportunities for the community. It's a win-win situation for everyone involved.</p>
           </div>
           <div class="posted-date">
             <p>Posted on Dec. 11 2023</p>
