--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <div class="article">
             <h2></h2>
             <p>The abundance of roses not only adds a touch of elegance to the surroundings but also symbolizes love, passion, and beauty. Each rose represents a unique story and emotion, making the experience even more enchanting. It's a wonderful opportunity for visitors to immerse themselves in the vibrant colors and delicate petals of these exquisite flowers.</p>
-          </div>>
+          </div>
           <div class="posted-date">
             <p>Posted on Dec. 11 2023</p>
           </div>
