--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     style="background-image: url(background1);">
     <nav class="navbar navbar-expand-lg text-uppercase fixed-top">
       <div class="container">
-       <a class="navbar-brand font-weight-bold" href="index.html"><span>M</span>y<span>bLog</span></a>
+       <a class="navbar-brand font-weight-bold" href="#Home"><span>M</span>y<span>bLog</span></a>
        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">         
            <div class="navbar-nav text-end">
-              <a class="nav-link px-lg-4 rounded" href="index.html">Home</a>
-              <a class="nav-link px-lg-4 rounded" href="tourist-spot.html">Tourist-spot</a>
-              <a class="nav-link px-lg-4 rounded" href="history.html">History</a>
-              <a class="nav-link px-lg-4 rounded" href="environment.html">Environment</a>
-              <a class="nav-link px-lg-4 rounded" href="contact-us.html">Contact us</a>
+              <a class="nav-link px-lg-4 rounded" href="#Home">Home</a>
+              <a class="nav-link px-lg-4 rounded" href="#tourist-spot">Tourist-spot</a>
+              <a class="nav-link px-lg-4 rounded" href="#History">History</a>
+              <a class="nav-link px-lg-4 rounded" href="#Environment">Environment</a>
+              <a class="nav-link px-lg-4 rounded" href="#Contact">Contact us</a>
             </div>
           </div>
         </div>
@@ -118,7 +118,7 @@
               Inside the Old Municipal Museum, you'll find a treasure trove of artifacts and exhibits that tell the story of Cordova's rich history. From ancient relics and traditional crafts to old photographs and documents, each item provides a glimpse into the town's past. The museum also hosts various cultural and educational events, offering locals and visitors alike the opportunity to learn more about Cordova's heritage. Despite its age, the Old Municipal Museum continues to play a vital role in preserving and promoting the cultural identity of Cordova.</p>
           </div>
           <div class="blog-view">
-            <a href="http://jaydilan.weebly.com/blog/cordova-cebu-museum" class="button">Read More</a>
+            <a href="history.html" class="button">Read More</a>
           </div>
           <div class="posted-date">
             <p>Posted on Dec. 09 2023</p>
@@ -150,7 +150,7 @@
               <br><br>If you're looking for a unique and eco-friendly experience in Cebu, Bakhawan Paradise in Buagsong, Cordova is definitely worth a visit. Just make sure to contact the owners before your visit to get the most updated information.</p>
           </div>
           <div class="blog-view">
-          <a href="https://sugbo.ph/2019/bakhaws-paradise-cordova/" class="button">Read More</a>
+          <a href="environment.html" class="button">Read More</a>
           </div>
           <div class="posted-date">
             <p>Posted on Dec. 02 2023</p>
